template/assets/css/style.css
/* Rob is a massive turdbutt */
body {
  -webkit-font-smoothing: antialiased;
  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
  background: #ffffff;
  font-family: "PT Sans", sans-serif; }

@media only screen and (-webkit-min-device-pixel-ratio: 1.5) {
  body {
    background-size: 72px 72px; } }
body, div, h1, h2, h3, h4, h5, h6, p, ul, ol, li, dl, dt, dd, img, form, fieldset, input, textarea, blockquote {
  -webkit-font-smoothing: antialiased;
  margin: 0;
  padding: 0;
  border: 0; }

body {
  padding-left: 12.5%;
  padding-right: 12.5%;
  height: 100%;
  margin: 0; }

section {
  color: #505050;
  background-color: #E6E6E6;
  margin-top: 10px;
  border: 1px solid #cacaca;
  box-shadow: 0px 10px 15px #f5f5f5;
  border-radius: 4px;
  padding: 20px;
  /* no vertical scrollbars for IE 7 */
  /* no vertical scrollbars for IE 6 */ }
  section p {
    margin-top: 5px;
    margin-bottom: 5px;
    padding-left: 10px; }
  section ul, section ol {
    padding-left: 30px; }
  section code {
    font-family: "PT Mono", monospace;
    border-radius: 3px;
    background: #FFFFFF;
    padding-left: 3px;
    padding-right: 3px;
    padding-bottom: 1px;
    padding-top: 1px;
    font-size: 14px;
    word-wrap: break-word; }
  section a {
    color: #444444;
    font-weight: bold;
    text-decoration: none;
    -o-transition: text-decoration ease .2s, color ease .2s;
    -ms-transition: text-decoration ease .2s, color ease .2s;
    -moz-transition: text-decoration ease .2s, color ease .2s;
    -webkit-transition: text-decoration ease .2s, color ease .2s;
    transition: text-decoration ease .2s, color ease .2s; }
    section a:hover {
      color: #3232AC;
      text-decoration: underline; }
  section h1 {
    text-decoration: none;
    border-bottom: 1px solid #cacaca; }
  section h2 {
    margin-top: 10px; }
    section h2.projectName {
      color: #505050; }
  section pre {
    max-height: 400px;
    border-radius: 5px;
    padding: 5px;
    overflow: auto;
    white-space: pre;
    word-break: normal;
    word-wrap: normal;
    margin-left: 10px;
    margin-right: 10px;
    box-shadow: 0px 0px 10px #494f69;
    background: #ffffff;
    font-family: "PT Mono", monospace;
    font-size: smaller; }
    section pre code {
      border: none;
      background: none;
      padding: 0px;
      word-wrap: normal; }
  section *:first-child + html pre {
    padding-bottom: 20px;
    overflow-y: hidden;
    overflow: visible;
    overflow-x: auto; }
  section * html pre {
    padding-bottom: 20px;
    overflow: visible;
    overflow-x: auto; }
  section img {
    max-width: 100%; }
  section.announcement {
    background: #d0fba6;
    color: #545454;
    padding: 10px;
    margin-bottom: 25px;
    text-align: center; }
  section#footer {
    cursor: default;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
    background-color: #d0fba6;
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 5px;
    text-align: center; }
    section#footer.returnToTop {
      cursor: pointer;
      -o-transition: background-color ease .2s;
      -ms-transition: background-color ease .2s;
      -moz-transition: background-color ease .2s;
      -webkit-transition: background-color ease .2s;
      transition: background-color ease .2s; }
      section#footer.returnToTop:hover {
        background-color: #B1EB78; }
    section#footer p {
      margin-top: 5px;
      margin-bottom: 5px;
      padding-left: 10px; }
    section#footer ul {
      padding-left: 30px; }
    section#footer a {
      color: #444444;
      text-decoration: none; }
    section#footer h2 {
      margin-top: 10px;
      padding-left: 10px; }

@media only screen and (max-width: 925px) {
  #main {
    background-color: #E6E6E6;
    border: 1px solid #cacaca;
    border-radius: 5px;
    margin-top: 10px;
    padding-top: 10px;
    padding-bottom: 10px; }
    #main span#menu-icon {
      display: block;
      text-align: center;
      text-decoration: none;
      cursor: default; }
    #main ul#topList {
      display: none;
      margin-left: 25px; }
      #main ul#topList li:nth-child(1) {
        display: none; }
    #main ul {
      margin-left: 10px; }
    #main:hover {
      padding-bottom: 5px; }
      #main:hover > span#menu-icon {
        padding-bottom: 10px;
        border-bottom: 1px solid #cacaca; }
      #main:hover > ul#topList {
        display: block;
        margin-top: 5px; } }
/* http://stephen.io/mediaqueries/ */
@media only screen and (max-width: 650px) {
  body {
    padding-left: 0px;
    padding-right: 0px; }
    body section {
      border-radius: 0px;
      border-left: none;
      border-right: none; }

  #main {
    border-radius: 0px;
    border-left: none;
    border-right: none; } }
@media only screen and (min-width: 926px) {
  #main {
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: center; }
    #main ul#topList {
      background: #efefef;
      background: linear-gradient(top, #efefef 0%, #bbbbbb 100%);
      background: -moz-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
      background: -webkit-linear-gradient(top, #efefef 0%, #bbbbbb 100%);
      box-shadow: 0px 0px 9px rgba(0, 0, 0, 0.15);
      width: 100%;
      border-radius: 5px;
      list-style: none;
      position: relative;
      display: inline-table; }
      #main ul#topList:after {
        content: "";
        clear: both;
        display: block; }
      #main ul#topList li {
        float: left;
        border-right: 2px solid silver; }
        #main ul#topList li:hover a {
          color: #fff;
          background: #4b545f; }
        #main ul#topList li a:active {
          background: #47515a; }
        #main ul#topList li:hover > ul {
          display: block; }
        #main ul#topList li p {
          -webkit-user-select: none;
          -moz-user-select: none;
          -ms-user-select: none;
          -o-user-select: none;
          user-select: none;
          cursor: default;
          font-weight: bold; }
        #main ul#topList li a, #main ul#topList li p {
          display: block;
          padding: 15px 40px;
          color: #484848;
          text-decoration: none; }
      #main ul#topList ul {
        z-index: 10;
        display: none;
        background: #5f6975;
        border-radius: 0px;
        padding: 0;
        position: absolute;
        top: 100%;
        list-style: none; }
        #main ul#topList ul li {
          float: none;
          border-top: 1px solid #6b727c;
          border-right: none;
          border-left: 1px solid #575f6a;
          position: relative; }
          #main ul#topList ul li a {
            width: 130px;
            padding: 15px 40px;
            color: #444444; }
            #main ul#topList ul li a:hover {
              background: #2f2f2f; }
            #main ul#topList ul li a:active {
              background: #47515a; }
        #main ul#topList ul ul {
          list-style: none;
          z-index: 10;
          position: absolute;
          left: 100%;
          top: -1px; }
    #main span#menu-icon {
      display: none; } }

